Bug 58839 - errors about too many fences printed while playing neverball
Summary: errors about too many fences printed while playing neverball
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-28 20:54 UTC by almos
Modified: 2014-05-24 20:05 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (69.62 KB, text/plain)
2013-01-02 23:11 UTC, almos
Details
Xorg.0.log (36.76 KB, text/plain)
2013-01-02 23:12 UTC, almos
Details

Description almos 2012-12-28 20:54:32 UTC
This is printed in mass quantities:
EE r600_pipe.c:80 r600_create_fence - r600: too many concurrent fences

They don't cause any visible rendering error though.
Comment 1 Alex Deucher 2013-01-02 20:22:19 UTC
If this is a regression can you bisect?  Please also attach your xorg log and dmesg output.
Comment 2 almos 2013-01-02 23:10:01 UTC
Yes, it is a regression. I'll bisect later.
Comment 3 almos 2013-01-02 23:11:43 UTC
Created attachment 72396 [details]
dmesg
Comment 4 almos 2013-01-02 23:12:05 UTC
Created attachment 72397 [details]
Xorg.0.log
Comment 5 almos 2013-01-19 00:25:47 UTC
There are only 'skip'ped commits left to test.
The first bad commit could be any of:
4003961fbf7e59de4b95448eada569adb91e5852
4a486f8bf2ca3d88228f8313282289abe78bc2f8
3039addf9363dbae1bbad1cd75d32e0013038c08
We cannot bisect more!


With 4003961f and 4a486f8b it segfaults immediately, since 3039addf9 it prints the errors.
Comment 6 Michel Dänzer 2013-01-21 11:03:22 UTC
Marek, any ideas? I'm also seeing this with radeonsi.
Comment 7 almos 2013-01-24 23:33:08 UTC
The error messages disappeared with a fresh checkout, so I believe commit 4f0563a6584dd83462d5cf35a7a1ebc4a4d6378f works. However, neverball still flashes garbage when I start it with __GL_FSAA_MODE=4 or any other number, so that was not caused by this problem.
Comment 8 almos 2014-05-24 20:05:06 UTC
Now this problem seems to be gone. Closing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.