src/gallium/state_trackers/dri/common/dri_drawable.h
@@ -65,6 +65,7 @@ struct dri_drawable
    unsigned int head;
    unsigned int tail;
    unsigned int desired_fences;
+   boolean flushing; /* prevents recursion in dri_flush */
 
    /* used only by DRISW */
    struct pipe_surface *drisw_surface;
